src/css/custom.css
/* ... */
.navbar-sidebar .menu .menu__link {
  font-family: 'Roboto';
  font-style: normal;
  font-weight: 400;
  font-size: 20px;
  line-height: 15px;
  color: var(--ifm-color-home-text-primary);
  padding-left: 0.5rem;
  padding-right: 0;
}

.menu__link--sublist {
  line-height: 20px !important;
}

[data-theme='dark'] .elements-container :is(.token.string, .token.function, .token.property) {
  color: var(--ifm-color-primary) !important;
}

[data-theme='dark'] .elements-container :is(.token.punctuation,.token.operator,.token.boolean,.token.number) {
  color: #fff !important;
}

.custom_sidebar_menu hr {
  width: 100% !important;
  margin: 26.4px !important;
  margin-left: 0 !important;
  margin-right: 0 !important;
}

.navbar-sidebar__brand {
  height: 64px;
  margin-bottom: 20px;
}

.navbar__inner .custom_sidebar_menu {
  display: none;
}

.custom_sidebar_menu {
  font-size: 16px !important;
}

[data-theme='dark'] .custom_sidebar_menu {
  color: #c1c1c1 !important;
}

@media (min-width: 640px) {

  .navbar-sidebar__brand,
  .navbar-sidebar__item.menu {
    padding-left: 40px;
    padding-right: 40px;
  }
}

@media (min-width: 768px) {
  .navbar-sidebar__brand {
    height: 88px;
  }

  .navbar-sidebar__brand,
  .navbar-sidebar__item.menu {
    padding-left: 48px;
    padding-right: 48px;
  }

  .navbar-sidebar__brand .navbar__logo {
    height: 3rem;
    width: 220px;
  }
}

/* override the DocSidebar top padding */
#sidebar-wrapper div:nth-child(3) {
  padding-top: 0.5rem;
}

.theme-doc-version-badge {
  margin-bottom: 1rem;
}

